--- a/ouman_h23.yaml
+++ b/ouman_h23.yaml
@@ -55,3 +55,15 @@ modbus:
         precision: 1
         device_class: temperature
         state_class: measurement
+
+      - name: "Ouman LV Kiertovesi"
+        unique_id: ouman_h23_lv_kiertovesi
+        slave: 1
+        address: 217         # UI 9
+        input_type: holding
+        data_type: int32
+        unit_of_measurement: "°C"
+        scale: 0.1
+        precision: 1
+        device_class: temperature
+        state_class: measurement
